--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="app">
         <p>{{ message }}</p>
-        <img v-bind:src="url" alt="">
+        <img v-bind:src="image.url" alt="image.description">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
