--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
     <div id="app">
-        <p>{{ message }}</p>
-        <img v-bind:src="image.url" alt="image.description">
-    </div>
-
+        <header>
+            <h1 :class="page.title">{{title}}</h1>
+        </header>
+        <main>   
+                <p>{{ message }}</p>
+                <img v-bind:src="image.url" alt="image.description">
+        </main>
+    </div> 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="script.js"></script>
 </body>
