--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <img :class=products.duck.image.class :src="products.duck.image.url" alt="image.description">
                     <ul><li @mouseover="duckColorHover(element.url)" v-for="element in products.duck.colors">{{element.name}}</li></ul>
                 </a>
+                <button @click="addToCart">Add to cart</button>
+                <button v-if="cart.quantity>0" @click="removeFromCart">Remove from cart</button>
+                <h2>{{cart.quantity}}</h2>
         </main>
     </div> 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
